修改了无效链接

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
               <div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
                 <nav class="pull">
                   <ul class="top-nav">
-                    <li><a href="/">Home <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                    <li><a href="projects.php">Portfolio <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                    <li><a href="about.php">About <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
-                    <li><a href="contact.php">Get in Touch <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
+                    <li><a href="SmartDental4.apk">Download <span class="indicator"><i class="fa fa-angle-right"></i></span></a></li>
                   </ul>
                 </nav>
               </div>
@@ -136,17 +133,11 @@
           <div class="row">
             <div class="col-md-12">
               <ul class="legals">
-                <li><a href="projects.php">Work</a></li>
-                <li><a href="about.php">About</a></li>
-                <li><a href="contact.php">Hello</a></li>
+                
               </ul>
               <div class="line"> </div>
-              <ul class="legals social">
-                <li><a href="https://twitter.com/mike_ingham"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://dribbble.com/mingham"><i class="fa fa-dribbble"></i></a></li>
-                <li><a href="contact.php"><i class="fa fa-envelope-o"></i></a></li>
-              </ul>
-              <p class="copy">&copy; 2014 · Mike Ingham · All Rights Reserved</p>
+            
+              <p class="copy">&copy; 2014 · Thanks for Mike Ingham · For Publication of 正畸管家 APP</p>
             </div>
           </div>
         </div>
